--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@300;400;700&display=swap");
+
+body {
+  font-family: "Averia Serif Libre", cursive;
+}
